Fix for warning grid breaking on iphone5

--- a/src/app/components/warning-list-item/warning-list-item.component.scss
+++ b/src/app/components/warning-list-item/warning-list-item.component.scss
@@ -1,5 +1,9 @@
 ion-item {
-    --inner-padding-end: 0px
+    --inner-padding-end: 0px;
+
+    ion-grid {
+        display: contents;
+    }
 }
 
 ion-item-option {
